# player

app/: build.gradle
app/src/androidTest/java/com/axin/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelp.cpp  JavaCallHelp.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  safe_queues.h
app/src/main/cpp/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/java/com/axin/player/: DNPlayer.java  ListActivity.java  MainActivity.java
app/src/main/res/layout/: activity_list.xml  activity_main.xml
app/src/test/java/com/axin/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
